--- a/index.html
+++ b/index.html
@@ -4,7 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Andrew Reshetar CV</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <section>
+        <div class="user_image">
+          <img src="./images/user_image.jpg" alt="user_image" />
+        </div>
+        <h1>Andrew Reshetar</h1>
+        <span>WEB DEVELOPER</span>
+      </section>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#interests">Interests</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="about_me" id="about">
+        <h1>About</h1>
+        <div class="description">
+          <div class="user_image_description">
+            <img src="./images/user_image.jpg" alt="user_image" />
+          </div>
+          <div class="user_info">
+            <h2>Hello,</h2>
+            <p>
+              I am an organised, ambitious and hardworking individual. I always
+              build strong relationship with people in order to deliver the best
+              result. I am extremely driven, with a clear goal to succeed.
+            </p>
+            <div class="user_info_description">
+              <div>
+                <p>Name: <span>Andrew Reshetar</span></p>
+                <p>Birthday: <span>25 August, 1995</span></p>
+              </div>
+              <div>
+                <p>Location: <span>Lviv, Ukraine</span></p>
+                <p>Email: <span>AReshetar25@gmail.com</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="my_skills" id="skills">
+        <h1>Skills</h1>
+      </section>
+      <section class="my_projects" id="projects">
+        <h1>Projects</h1>
+      </section>
+      <section class="my_interests" id="interests">
+        <h1>Interests</h1>
+      </section>
+    </main>
+  </body>
 </html>
