added skills section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
       </section>
       <section class="my_skills" id="skills">
         <h1>Skills</h1>
+        <div class="skills_wrapper">
+          <div>
+            <p>HTML5: <meter min="200" max="500" value="450"></meter></p>
+            <p>CSS3: <meter min="200" max="500" value="450"></meter></p>
+            <p>JavaScript: <meter min="200" max="500" value="410"></meter></p>
+            <p>React: <meter min="200" max="500" value="400"></meter></p>
+            <p>Redux: <meter min="200" max="500" value="400"></meter></p>
+          </div>
+          <div>
+            <p>Node JS: <meter min="200" max="500" value="380"></meter></p>
+            <p>Express: <meter min="200" max="500" value="380"></meter></p>
+            <p>MongoDB: <meter min="200" max="500" value="330"></meter></p>
+            <p>Mongoose: <meter min="200" max="500" value="330"></meter></p>
+            <p>SQL: <meter min="200" max="500" value="380"></meter></p>
+          </div>
+        </div>
       </section>
       <section class="my_projects" id="projects">
         <h1>Projects</h1>
