created interests section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
       </section>
       <section class="my_interests" id="interests">
         <h1>Interests</h1>
+        <div class="interests_wrapper">
+          <div class="row-hobbies-one">
+            <img src="./images/meditation.png" alt="meditation" />
+            <img src="./images/reading.png" alt="reading" />
+          </div>
+          <div class="row-hobbies-two">
+            <img src="./images/guitar.png" alt="guitar" />
+          </div>
+          <div class="row-hobbies-three">
+            <img src="./images/basketball.png" alt="basketball" />
+            <img src="./images/swimming.png" alt="swimming" />
+          </div>
+        </div>
       </section>
     </main>
   </body>
