--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Andrew Reshetar CV</title>
   </head>
@@ -24,7 +28,6 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
           <li><a href="#interests">Interests</a></li>
         </ul>
       </nav>
@@ -75,9 +78,6 @@
           </div>
         </div>
       </section>
-      <section class="my_projects" id="projects">
-        <h1>Projects</h1>
-      </section>
       <section class="my_interests" id="interests">
         <h1>Interests</h1>
         <div class="interests_wrapper">
@@ -95,5 +95,27 @@
         </div>
       </section>
     </main>
+    <footer>
+      <ul>
+        <li>
+          <a href="skype:live:.cid.7eee5e843969b83e?userinfo">
+            <i class="fab fa-skype"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/andrew-reshetar-877636168"
+            target="_blank"
+          >
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/AndrewReshetar" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
